--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "@prisma/client": "^3.12.0",
+    "@prisma/client": "^3.14.0",
     "express": "^4.17.3",
+    "express-async-errors": "^3.1.1",
     "tsc": "^2.0.4"
   }
 }
